feat(schedule): update copy

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -259,15 +259,15 @@
   },
   "schedule": {
     "title": "Jam Schedule (Experimental)",
-    "subtitle": "Jam can schedule and autoamtically execute multiple collaborative transactions over a longer period of time. When finished, your funds will be detached from their history.",
+    "subtitle": "The scheduler executes multiple transactions using random amounts and time intervals to break surveillance heuristics. Every scheduled transaction is a collaborative transaction.",
     "error_starting_schedule_failed": "Starting the schedule failed.",
     "error_stopping_schedule_failed": "Stopping the schedule failed.",
     "complete_wallet_title": "Complete Wallet",
     "complete_wallet_subtitle": "This will use all of your non-frozen funds.",
-    "description_destination_addresses": "To keep your funds private, they will be randomly split up accross three destination addresses. These could be coming from your cold storage or be deposit addresses of an exchange. Instead, you can also choose to keep your funds in Jam.",
+    "description_destination_addresses": "The scheduler can automatically send your funds to an external wallet after completion. This feature requires you to provide multiple destination addresses to keep certain privacy guarantees.",
     "error_invalid_destionation_address": "Please enter valid a destination address.",
     "toggle_internal_destination_title": "Send to external wallet",
-    "toggle_internal_destination_subtitle": "Use destination addresses from account {{ account }} in your wallet.",
+    "toggle_internal_destination_subtitle": "Specify destination addresses to send funds to an external wallet.",
     "label_destination_input": "Destination {{ destination }}",
     "placeholder_destination_input": "Enter destination address...",
     "button_start": "Start Schedule",
