feat(scheduler): update copy

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -259,12 +259,12 @@
   },
   "schedule": {
     "title": "Jam Schedule (Experimental)",
-    "subtitle": "The scheduler executes multiple transactions using random amounts and time intervals to break surveillance heuristics. Every scheduled transaction is a collaborative transaction.",
+    "subtitle": "Execute multiple transactions using random amounts and time intervals to break surveillance heuristics. Every scheduled transaction is a collaborative transaction.",
     "error_starting_schedule_failed": "Starting the schedule failed.",
     "error_stopping_schedule_failed": "Stopping the schedule failed.",
     "complete_wallet_title": "Complete Wallet",
     "complete_wallet_subtitle": "This will use all of your non-frozen funds.",
-    "description_destination_addresses": "The scheduler can automatically send your funds to an external wallet after completion. This feature requires you to provide multiple destination addresses to keep certain privacy guarantees.",
+    "description_destination_addresses": "You can choose to send your funds to an external wallet after completion automatically. However, this feature requires you to provide multiple destination addresses to preserve your privacy.",
     "error_invalid_destionation_address": "Please enter valid a destination address.",
     "toggle_internal_destination_title": "Send to external wallet",
     "toggle_internal_destination_subtitle": "Specify destination addresses to send funds to an external wallet.",
