--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -258,10 +258,10 @@
     }
   },
   "schedule": {
-    "title": "Jam Schedule (Experimental)",
+    "title": "Jam Scheduler (Experimental)",
     "subtitle": "Execute multiple transactions using random amounts and time intervals to break surveillance heuristics. Every scheduled transaction is a collaborative transaction.",
-    "error_starting_schedule_failed": "Starting the schedule failed.",
-    "error_stopping_schedule_failed": "Stopping the schedule failed.",
+    "error_starting_schedule_failed": "Starting the scheduler failed.",
+    "error_stopping_schedule_failed": "Stopping the scheduler failed.",
     "complete_wallet_title": "Complete Wallet",
     "complete_wallet_subtitle": "This will use all of your non-frozen funds.",
     "description_destination_addresses": "You can choose to send your funds to an external wallet after completion automatically. However, this feature requires you to provide multiple destination addresses to preserve your privacy.",
@@ -270,7 +270,7 @@
     "toggle_internal_destination_subtitle": "Specify destination addresses to send funds to an external wallet.",
     "label_destination_input": "Destination {{ destination }}",
     "placeholder_destination_input": "Enter destination address...",
-    "button_start": "Start Schedule",
-    "button_stop": "Stop Schedule"
+    "button_start": "Start Scheduler",
+    "button_stop": "Stop Scheduler"
   }
 }
