feat(receive): update copy

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -188,12 +188,12 @@
   },
   "receive": {
     "title": "Receive",
-    "subtitle": "Send bitcoin to the address below.",
-    "error_loading_address_failed": "Loading new address failed.",
+    "subtitle": "Send sats to the address below to fund your wallet.",
+    "error_loading_address_failed": "Unable to get new address.",
     "error_copy_address_failed": "Could not copy address.",
     "button_copy_address": "Copy",
     "text_copy_address_confirmed": "Copied",
-    "button_settings": "Settings",
+    "button_settings": "Advanced",
     "label_choose_account": "Choose account",
     "account_selector_option_dev_mode": "Account {{ number }}",
     "label_amount": "Amount to request in sats",
