--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -204,7 +204,7 @@
   "earn": {
     "title": "Earn",
     "subtitle": "By providing liquidity for others, you improve your privacy and theirs. Your sats always remain under your control and never leave your wallet.",
-    "market_explainer": "You can choose how much you want to charge for your offer. Note that you participate and compete in an open market. There are no guarantees that other market participants will take you up on your offer. Being chosen for a collaborative transaction can take time and is not guaranteed. Low fees and fidelity bonds increase your chances.",
+    "market_explainer": "You can choose how much you want to charge for your offer. Note that you participate and compete in an open market. There are no guarantees that other market participants will take you up on your offer. Being chosen for a collaborative transaction can take time and is not guaranteed. Low fees increase your chances.",
     "alert_empty_report": "The report is empty.",
     "text_report_length": "Showing {{ visibleLines }} of {{ linesWithoutHeader }} entries",
     "error_loading_report_failed": "Failed to load yield generator report.",
