feat(earn): improve copy

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -207,7 +207,7 @@
     "market_explainer": "You can choose how much you want to charge for your offer. Note that you participate and compete in an open market. There are no guarantees that other market participants will take you up on your offer. Being chosen for a collaborative transaction can take time and is not guaranteed. Low fees increase your chances.",
     "alert_empty_report": "The report is empty.",
     "text_report_length": "Showing {{ visibleLines }} of {{ linesWithoutHeader }} entries",
-    "error_loading_report_failed": "Failed to load yield generator report.",
+    "error_loading_report_failed": "Failed to load earnings report.",
     "alert_starting": "Service is starting.",
     "alert_stopping": "Service is stopping.",
     "alert_running": "Service is running.",
@@ -216,9 +216,9 @@
     "label_rel_fee": "Relative fee {{ fee }}",
     "description_rel_fee": "The fee to charge others, as a percentage of the transaction amount.",
     "feedback_invalid_rel_fee": "Please provide a relative fee between {{feeRelPercentageMin}} and {{feeRelPercentageMax}}.",
-    "label_abs_fee": "Absolute fee in sats",
-    "description_abs_fee": "An absolute amount you get for helping others to improve their privacy.",
-    "feedback_invalid_abs_fee": "Please provide an absolute fee.",
+    "label_abs_fee": "Absolute fee {{ fee }}",
+    "description_abs_fee": "The fee to charge others, as an absolute amount denominated in sats.",
+    "feedback_invalid_abs_fee": "Invalid absolute fee.",
     "label_min_amount": "Minimum amount in sats",
     "feedback_invalid_min_amount": "Please provide a minimum amount.",
     "button_start": "Start",
