feat(send): improve copy

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -151,11 +151,11 @@
   },
   "send": {
     "loading": "Loading",
-    "title": "Send bitcoin",
+    "title": "Send",
     "subtitle": "Collaborative transactions improve the privacy of yourself and others.",
     "label_num_collaborators": "Number of collaborators: {{ numCollaborators }}",
     "input_num_collaborators_placeholder": "Other",
-    "description_num_collaborators": "A higher number is better for privacy, but also increases the fee.",
+    "description_num_collaborators": "A higher number is better for privacy, but also increases the transaction fee.",
     "error_invalid_num_collaborators": "Please use between {{ minNumCollaborators }} and {{ maxNumCollaborators }} collaborators.",
     "taker_error_message_max_fees_config_missing": "Config variables 'max_cj_fee_rel' and 'max_cj_fee_abs' must be set in your joinmarket.cfg in order to send collaborative transactions. Consider adding them to your config manually.",
     "direct_payment_error_message_bad_request": "Please verify your inputs carefully.",
@@ -175,7 +175,7 @@
     "label_amount": "Amount in sats",
     "placeholder_amount": "Enter amount...",
     "feedback_invalid_amount": "Please provide a valid amount.",
-    "toggle_coinjoin": "Send as collaborative transaction for improved privacy",
+    "toggle_coinjoin": "Send as collaborative transaction",
     "button_send": "Send",
     "text_sending": "Sending",
     "button_sweep": "Sweep",
