--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -152,7 +152,7 @@
   "send": {
     "loading": "Loading",
     "title": "Send",
-    "subtitle": "Collaborative transactions improve the privacy of yourself and others.",
+    "subtitle": "Use a collaborative transaction for increased security and privacy.",
     "label_num_collaborators": "Number of collaborators: {{ numCollaborators }}",
     "input_num_collaborators_placeholder": "Other",
     "description_num_collaborators": "A higher number is better for privacy, but also increases the transaction fee.",
@@ -176,6 +176,7 @@
     "placeholder_amount": "Enter amount...",
     "feedback_invalid_amount": "Please provide a valid amount.",
     "toggle_coinjoin": "Send as collaborative transaction",
+    "toggle_coinjoin_subtitle": "Collaborative transactions improve the privacy of yourself and others.",
     "button_send": "Send",
     "text_sending": "Sending",
     "button_sweep": "Sweep",
