--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -275,8 +275,8 @@
     "description_fees": "The scheduler will pay all occurring fees automatically.",
     "button_start": "Start Scheduler",
     "button_stop": "Stop Scheduler",
-    "progress_tldr_seconds": "Processing schedule (<1>{{ length }}</1> transactions over <3>{{ seconds }}</3> seconds)",
-    "progress_tldr_hours": "Processing schedule (<1>{{ length }}</1> transactions over <3>{{ hours }}</3> hours)",
+    "progress_tldr_seconds": "Processing schedule... Executing <1>{{ length }}</1> transactions over <3>{{ seconds }}</3> seconds.",
+    "progress_tldr_hours": "Processing schedule... Executing <1>{{ length }}</1> transactions over <3>{{ hours }}</3> hours.",
     "progress_description": "The estimated time does not consider any delays brought about by network delays or transaction confirmations. It is an estimate of the minimum waiting time. The actual time for processing the whole schedule will likely be longer.",
     "progress_current_state": "Waiting for transaction <1>{{ current }}</1> of <3>{{ total }}</3> to process...",
     "progress_done": "All transactions completed successfully. The scheduler will stop soon.",
