ui: big red button for payments without improved privacy (#270)
* refactor: increase readability in Send component

* ui: big red button for payments without improved privacy

* feat(send): update button copy

Co-authored-by: Daniel <10026790+dnlggr@users.noreply.github.com>

Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>
Co-authored-by: Daniel <10026790+dnlggr@users.noreply.github.com>

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -178,6 +178,7 @@
     "toggle_coinjoin": "Send as collaborative transaction",
     "toggle_coinjoin_subtitle": "Collaborative transactions improve the privacy of yourself and others.",
     "button_send": "Send",
+    "button_send_without_improved_privacy": "Send without privacy improvement",
     "text_sending": "Sending",
     "button_sweep": "Sweep",
     "button_clear_sweep": "Clear",
