--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -281,6 +281,7 @@
     "progress_description": "This estimate is the minimum waiting time. Additional delays due to network communication or transaction confirmation are not considered.",
     "progress_current_state": "Waiting for transaction <1>{{ current }}</1> of <3>{{ total }}</3> to process...",
     "progress_done": "All transactions completed successfully. The scheduler will stop soon.",
-    "error_loading_schedule_failed": "Loading schedule progress failed."
+    "error_loading_schedule_failed": "Loading schedule progress failed.",
+    "error_address_reuse": "Reusing addresses is prohibited. Make sure to use unique and unused addresses."
   }
 }
