feat(intro): improve copy

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -32,15 +32,15 @@
     "splashscreen_warning_title": "Warning",
     "splashscreen_warning_text": "While JoinMarket is tried and tested, Jam is anything but. It is alpha software, so please use it with caution. You can <1>help to improve the project on GitHub</1>.",
     "screen_1_title": "Welcome to Jam for JoinMarket!",
-    "screen_1_description": "JoinMarket is a privacy-focused software solution that aims to improve the confidentiality and privacy of your bitcoin transactions. It facilitates the creation of collaborative transactions through a peer-to-peer marketplace.",
+    "screen_1_description": "Jam is an interface for JoinMarket, a privacy-focused software solution that aims to improve the confidentiality and privacy of your bitcoin transactions. Its main focus is to facilitate the creation of collaborative transactions through a peer-to-peer marketplace.",
     "screen_2_title": "Collaborative Transactions",
-    "screen_2_description": "To have strong privacy guarantees in the open and transparent world of bitcoin, special kinds of transactions have to be created. JoinMarket helps you to create these transactions in an easy and automated way.",
+    "screen_2_description": "To have strong privacy guarantees in the open and transparent world of bitcoin, special kinds of transactions have to be created. Jam helps you to create these transactions in an easy and automated way.",
     "screen_3_title": "You Are In Control",
-    "screen_3_description": "JoinMarket is fully non-custodial, meaning that you always have full control over your funds. The system uses Bitcoin’s smart contracts to make sure that all transactions are atomic and your funds are secure at all times.",
+    "screen_3_description": "Jam is fully non-custodial, meaning that you always have full control over your funds. JoinMarket uses Bitcoin's smart contracts to make sure that all transactions are atomic and your funds are secure at all times.",
     "screen_4_title": "No Trusted Third Parties",
     "screen_4_description": "Since JoinMarket is a peer-to-peer system, trusted third parties are eliminated from the get-go. This unique market-driven approach reduces counterparty risk to a minimum.",
     "screen_5_title": "Privacy for All",
-    "screen_5_description": "JoinMarket is free and open-source software without a single point of failure. Everyone is free to use it and build upon it.",
+    "screen_5_description": "JoinMarket is free and open-source software without a single point of failure. Everyone is free to extend it, tinker with it, inspect it, distribute it, and build upon it. And, of course, you are free to use it to improve the privacy of yourself and others.",
     "button_next": "Next",
     "button_complete": "Let's go!"
   },
