fix(splash): titlecase tagline

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -24,7 +24,7 @@
   },
   "onboarding": {
     "splashscreen_title": "Jam",
-    "splashscreen_subtitle": "Privacy for yourself and others.",
+    "splashscreen_subtitle": "Privacy for Yourself and Others",
     "splashscreen_button_get_started": "Get started",
     "splashscreen_button_skip_intro": "Skip intro",
     "splashscreen_description_line1": "Your wallet, your coins.",
