--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -251,6 +251,10 @@
       "title": "<0>Earn</0> yield by providing liquidity.",
       "description": "Offer your sats to the marketplace. No trust or custody required—you are always in full control of your funds."
     },
+    "item_5": {
+      "title": "<0>Send</0> a collaborative transaction to yourself.",
+      "description": "Collaborative transactions increase the privacy of yourself and others."
+    },
     "item_last": {
       "title": "Go to step one and repeat.",
       "description": "Still confused? Dig into the <2>documentation</2>."
