--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -102,7 +102,8 @@
     "back_button": "Back",
     "skip_button": "Skip",
     "next_button": "Next",
-    "placeholder_seed_word_input": "Word"
+    "placeholder_seed_word_input": "Word",
+    "hint_duration_text": "Please be patient, this may take a few minutes."
   },
   "current_wallet": {
     "text_loading": "Loading",
