ui: add section titles 'Wallet' and 'Community' to settings page

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -131,6 +131,8 @@
   },
   "settings": {
     "title": "Settings",
+    "section_title_wallet": "Wallet",
+    "section_title_community": "Community",
     "show_balance": "Show Balance",
     "hide_balance": "Hide Balance",
     "use_sats": "Display amounts in sats",
