--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1,4 +1,8 @@
 {
+  "global": {
+    "text_simple_view": "Simple view",
+    "text_advanced_view": "Advanced view"
+  },
   "navbar": {
     "title": "Jam",
     "button_create_wallet": "Create Wallet",
