ui: Earn screen figma alignment (#304)
* ui: show config options on Earn screen only in advanced mode

* refactor: externalize AdvancedModeToggleButton component to own file

* refactor: ToggleSwitch from jsx to tsx

* refactor: pass api result down the promise chain on Earn page

* ui: center offertype toggle switch on Earn page

* ui: ability to add an 'off' label and subtitle to ToggleSwitch

* ui: add label to off state of offertype toggle switch on Earn page

* ui: add individual 'simple/advanced view' toggle to Earn screen

* ui: add prefix to inputs on Earn page

* fix: do not populate fee rel with zero when no input is given

* refactor: move styles for Earn page from global to module file

* Revert "ui: ability to add an 'off' label and subtitle to ToggleSwitch"

This reverts commit 04edc2914e1365d6333afdd237dd898f9fe96876.

* Revert "ui: add label to off state of offertype toggle switch on Earn page"

This reverts commit 3142131e47c20e2cf7bb09032275f6e92e669252.

* Revert "ui: add individual 'simple/advanced view' toggle to Earn screen"

This reverts commit 0f850f3e2869b40eebe45d1462eb6e2b6d3dcffe.

* Revert "refactor: externalize AdvancedModeToggleButton component to own file"

This reverts commit 6bf5445265202c53d4c1b74177a543276a9fa8b9.

* dev: move styles for Receive screen to module

* review: replace toggle with 'advanced' form dropdown in Earn screen

* review: add RadioTabs component

* review: use RadioTabs for offertype on Earn screen

* fix: title in RadioTab

* feedback: style updates

* feedback: rename control element

Co-authored-by: Daniel <10026790+dnlggr@users.noreply.github.com>

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -215,7 +215,9 @@
     "alert_stopping": "Service is stopping.",
     "alert_running": "Earning sats...",
     "alert_coinjoin_in_progress": "A collaborative transaction is currently in progress.",
-    "toggle_rel_offer": "Relative offer",
+    "button_settings": "Advanced",
+    "radio_abs_offer_label": "Absolute offer",
+    "radio_rel_offer_label": "Relative offer",
     "label_rel_fee": "Relative fee {{ fee }}",
     "description_rel_fee": "The fee to charge others, as a percentage of the transaction amount.",
     "feedback_invalid_rel_fee": "Please provide a relative fee between {{feeRelPercentageMin}} and {{feeRelPercentageMax}}.",
