--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -7,8 +7,7 @@
     "tab_earn": "Earn",
     "joining_in_progress": "Joining",
     "menu_mobile": "Menu",
-    "menu_mobile_settings": "Settings",
-    "menu_mobile_wallets": "Wallets"
+    "menu_mobile_settings": "Settings"
   },
   "app": {
     "alert_no_connection": "No connection to backend: {{ connectionError }}"
