ui: Wallet Detail Overlay (#241)
* refactor: DisplayBranch from jsx to tsx

* ui: improve DisplayAccountsOverlay on mobile screens

* ui: show derivation path below branch title

* ui: abbreviate hd path in DisplayBranch component

* ui: add copy functionality to DisplayBranch

* ui: branches as accordion in DisplayAccountsOverlay

Co-authored-by: Daniel <10026790+dnlggr@users.noreply.github.com>

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1,4 +1,8 @@
 {
+  "global": {
+    "back": "Back",
+    "close": "Close"
+  },
   "navbar": {
     "title": "Jam",
     "button_create_wallet": "Create Wallet",
@@ -125,7 +129,7 @@
     "button_unfreeze": "unfreeze",
     "account_button_send": "Send",
     "account_button_receive": "Receive",
-    "account_heading_external_addresses": "External Addresses",
+    "account_heading_external_addresses": "External addresses for deposits",
     "account_heading_internal_addresses": "Internal Addresses"
   },
   "settings": {
