--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -148,12 +148,18 @@
     "show_seed": "Show seed phrase",
     "hide_seed": "Hide seed phrase",
     "reveal_seed": "Reveal seed phrase",
+    "button_lock_wallet": "Lock wallet",
+    "button_locking_wallet": "Locking...",
     "button_switch_wallet": "Switch wallet",
+    "button_create_wallet": "Create new wallet",
     "error_loading_seed_failed": "Could not retrieve seed phrase.",
     "seed_modal_info_text": "Please write down your seed phrase and password! Without this information you will not be able to access and recover your wallet!",
     "github": "GitHub",
     "telegram": "Telegram",
-    "jm_twitter": "JoinMarket Twitter"
+    "jm_twitter": "JoinMarket Twitter",
+    "confirm_locking_modal_title": "Lock Wallet",
+    "confirm_locking_modal_body_earn": "Earn is active. Locking the wallet will stop the service. You can close the browser window to let it run in the background.",
+    "confirm_locking_modal_body_jam": "A collaborative transaction is being executed. Locking the wallet will stop the service. You can close the browser window to let it run in the background."
   },
   "send": {
     "loading": "Loading",
