--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -274,7 +274,7 @@
   },
   "fidelity_bond": {
     "title": "Fidelity Bonds (Experimental)",
-    "subtitle": "Fidelity Bonds are a feature to improve the resistance to sybil attacks by deliberately locking up bitcoin value to make a cryptographic identity expensive to obtain. Therefore improving your privacy and the whole network. You will have a higher probability to take part in collaborative transaction and earn more yield.",
+    "subtitle": "Fidelity Bonds prevent Sybil attacks by deliberately increasing the cost of creating cryptographic identities. Creating a fidelity bond will increase your chances of being picked for a collaborative transaction.",
     "text_maker_running": "Earn is active. Stop the service in order to create a Fidelity Bond.",
     "text_coinjoin_already_running": "A collaborative transaction is currently in progress.",
     "create_form": {
